crates/erlang_service/fixtures/truncated_character.erl
-module(truncated_character).
-export([f/0]).

f() ->
    <<"空手🙂">>.
